RecyclerViewを稼働 AlarmClassListを割り当て ワーニング消し

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">alarm_final</string>
+    <string name="back">BACK</string>
+    <string name="save">保存</string>
+
+    <string name="add_clock">add clock</string>
 </resources>
